tests/fixtures/effect-compiler/errors/EFX2402-2.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () { vec4 texture = vec4(1); }
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
